extensions/ext_scanners.c
/* Generated by re2c 4.5.1 on Thu May  7 00:21:44 2026 */


#include <stdlib.h>
#include "ext_scanners.h"

bufsize_t _ext_scan_at(bufsize_t (*scanner)(const unsigned char *), unsigned char *ptr, int len, bufsize_t offset)
{
	bufsize_t res;

        if (ptr == NULL || offset >= len) {
          return 0;
        } else {
	  unsigned char lim = ptr[len];

	  ptr[len] = '\0';
	  res = scanner(ptr + offset);
	  ptr[len] = lim;
        }

	return res;
}



bufsize_t _scan_table_start(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ':
    case '|': goto yy3;
    case '-': goto yy4;
    case ':': goto yy5;
    default: goto yy1;
  }
yy1:
  ++p;
yy2:
  { return 0; }
yy3:
  yych = *(marker = ++p);
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy6;
    case '-': goto yy8;
    case ':': goto yy9;
    default: goto yy2;
  }
yy4:
  yych = *(marker = ++p);
  switch (yych) {
    case '\t':
    case '\n':
    case '\v':
    case '\f':
    case '\r':
    case ' ':
    case '|': goto yy11;
    case '-': goto yy8;
    case ':': goto yy10;
    default: goto yy2;
  }
yy5:
  yych = *(marker = ++p);
  switch (yych) {
    case '-': goto yy8;
    default: goto yy2;
  }
yy6:
  yych = *++p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy6;
    case '-': goto yy8;
    case ':': goto yy9;
    default: goto yy7;
  }
yy7:
  p = marker;
  goto yy2;
yy8:
  yych = *++p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ':
    case ':': goto yy10;
    case '\n': goto yy12;
    case '\r': goto yy13;
    case '-': goto yy8;
    case '|': goto yy14;
    default: goto yy7;
  }
yy9:
  yych = *++p;
  switch (yych) {
    case '-': goto yy8;
    default: goto yy7;
  }
yy10:
  yych = *++p;
yy11:
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy10;
    case '\n': goto yy12;
    case '\r': goto yy13;
    case '|': goto yy14;
    default: goto yy7;
  }
yy12:
  ++p;
  {
      return (bufsize_t)(p - start);
    }
yy13:
  yych = *++p;
  switch (yych) {
    case '\n': goto yy12;
    default: goto yy7;
  }
yy14:
  yych = *++p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy14;
    case '\n': goto yy12;
    case '\r': goto yy13;
    case '-': goto yy8;
    case ':': goto yy9;
    default: goto yy7;
  }
}

}

bufsize_t _scan_table_cell(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
    case 0x00:
    case '\n':
    case '\r':
    case '|': goto yy16;
    case '\\': goto yy19;
    default: goto yy17;
  }
yy16:
  ++p;
  { return 0; }
yy17:
  yych = *++p;
  switch (yych) {
    case 0x00:
    case '\n':
    case '\r':
    case '|': goto yy18;
    case '\\': goto yy19;
    default: goto yy17;
  }
yy18:
  { return (bufsize_t)(p - start); }
yy19:
  yych = *++p;
  switch (yych) {
    case 0x00:
    case '\n':
    case '\r': goto yy18;
    case '\\': goto yy19;
    default: goto yy17;
  }
}

}

bufsize_t _scan_table_cell_end(const unsigned char *p)
{
  const unsigned char *start = p;
  
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
    case '|': goto yy22;
    default: goto yy21;
  }
yy21:
  ++p;
  { return 0; }
yy22:
  yych = *++p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy22;
    default: goto yy23;
  }
yy23:
  { return (bufsize_t)(p - start); }
}

}

bufsize_t _scan_table_row_end(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy27;
    case '\n': goto yy28;
    case '\r': goto yy29;
    default: goto yy25;
  }
yy25:
  ++p;
yy26:
  { return 0; }
yy27:
  yych = *(marker = ++p);
  switch (yych) {
    case '\t':
    case '\n':
    case '\v':
    case '\f':
    case '\r':
    case ' ': goto yy31;
    default: goto yy26;
  }
yy28:
  ++p;
  { return (bufsize_t)(p - start); }
yy29:
  yych = *++p;
  switch (yych) {
    case '\n': goto yy28;
    default: goto yy26;
  }
yy30:
  yych = *++p;
yy31:
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy30;
    case '\n': goto yy28;
    case '\r': goto yy33;
    default: goto yy32;
  }
yy32:
  p = marker;
  goto yy26;
yy33:
  yych = *++p;
  switch (yych) {
    case '\n': goto yy28;
    default: goto yy32;
  }
}

}

bufsize_t _scan_tasklist(const unsigned char *p)
{
  const unsigned char *marker = NULL;
  const unsigned char *start = p;
  
{
  unsigned char yych;
  yych = *p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy37;
    case '*':
    case '+':
    case '-': goto yy38;
    case '0':
    case '1':
    case '2':
    case '3':
    case '4':
    case '5':
    case '6':
    case '7':
    case '8':
    case '9': goto yy39;
    default: goto yy35;
  }
yy35:
  ++p;
yy36:
  { return 0; }
yy37:
  yych = *(marker = ++p);
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy40;
    case '*':
    case '+':
    case '-': goto yy42;
    case '0':
    case '1':
    case '2':
    case '3':
    case '4':
    case '5':
    case '6':
    case '7':
    case '8':
    case '9': goto yy43;
    default: goto yy36;
  }
yy38:
  yych = *(marker = ++p);
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy44;
    default: goto yy36;
  }
yy39:
  yych = *(marker = ++p);
  switch (yych) {
    case '\n': goto yy36;
    case '0':
    case '1':
    case '2':
    case '3':
    case '4':
    case '5':
    case '6':
    case '7':
    case '8':
    case '9': goto yy46;
    default: goto yy42;
  }
yy40:
  yych = *++p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy40;
    case '*':
    case '+':
    case '-': goto yy42;
    case '0':
    case '1':
    case '2':
    case '3':
    case '4':
    case '5':
    case '6':
    case '7':
    case '8':
    case '9': goto yy43;
    default: goto yy41;
  }
yy41:
  p = marker;
  goto yy36;
yy42:
  yych = *++p;
  switch (yych) {
    case '[': goto yy41;
    default: goto yy45;
  }
yy43:
  yych = *++p;
  switch (yych) {
    case '\n': goto yy41;
    case '0':
    case '1':
    case '2':
    case '3':
    case '4':
    case '5':
    case '6':
    case '7':
    case '8':
    case '9': goto yy46;
    default: goto yy42;
  }
yy44:
  yych = *++p;
yy45:
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy44;
    case '[': goto yy47;
    default: goto yy41;
  }
yy46:
  yych = *++p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy44;
    case '\n': goto yy41;
    case '0':
    case '1':
    case '2':
    case '3':
    case '4':
    case '5':
    case '6':
    case '7':
    case '8':
    case '9': goto yy46;
    default: goto yy42;
  }
yy47:
  yych = *++p;
  switch (yych) {
    case ' ':
    case 'x': goto yy48;
    default: goto yy41;
  }
yy48:
  yych = *++p;
  switch (yych) {
    case ']': goto yy49;
    default: goto yy41;
  }
yy49:
  yych = *++p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy50;
    default: goto yy41;
  }
yy50:
  yych = *++p;
  switch (yych) {
    case '\t':
    case '\v':
    case '\f':
    case ' ': goto yy50;
    default: goto yy51;
  }
yy51:
  { return (bufsize_t)(p - start); }
}

}
